# godot-scgms-game-wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
demo/: MainScene.tscn  SCGMSController.gd  icon.svg.import  project.godot
demo/addons/godot-scgms-game-wrapper/: godot-scgms-game-wrapper.gdextension
src/: Controller.cpp  Controller.h  register_types.cpp  register_types.h
